# TelecomSystem

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/include/: ClientData.hpp  ClientsListModel.hpp  NetworkWorker.hpp  ServerController.hpp
Server/qml/: ClientsView.qml  ControlButton.qml  ControlView.qml  DataView.qml  EventsView.qml  Main.qml  SettingsView.qml
Server/src/: ClientData.cpp  ClientsListModel.cpp  NetworkWorker.cpp  ServerController.cpp  main.cpp
Shared/: CMakeLists.txt
Shared/include/: NetworkProtocol.hpp
Shared/src/: NetworkProtocol.cpp
